Bug fixes (#5218)
* PLT-5319 - Fixing text alignment security modal

* PLT-5280 - Fixing add comment button in RHS mobile

* PLT-5397 - Fixing Floating timestamp on mobile

* PLT-5129 - Hiding formatting help text

* PLT-5242 - Adjusting team sidebar border on IE!!

* PLT-5226 - Placing settings toggle over header

* PLT-5222 - Placed team description tooltip on top

* PLT-5201 - Account settings overlap on mobile

* PLT-5138 - Adding bg to pending post actions

* PLT-5286 - Adjusting play button on youtube videos

* PLT-5313 - Adjusting space between emoji reactions

* PLT-5187 - Adjusting text in channel switcher

* PLT-5399 - Reverting button alignment in modal

--- a/webapp/sass/components/_mentions.scss
+++ b/webapp/sass/components/_mentions.scss
@@ -21,6 +21,13 @@
     width: 100%;
     z-index: 101;
 
+    .status {
+        font-size: 15px;
+        text-align: center;
+        vertical-align: bottom;
+        width: 20px;
+    }
+
     .fa-user {
         position: relative;
         top: -1px;
