--- a/webapp/sass/layout/_post.scss
+++ b/webapp/sass/layout/_post.scss
@@ -311,7 +311,7 @@
 
     &.scrolling {
         @include translateY(0);
-        @include opacity(.8);
+        @include opacity(.9);
     }
 
     &.rhs {
@@ -322,6 +322,7 @@
         @include border-radius(3px);
         @include font-smoothing(initial);
         background: $primary-color;
+        border: 1px solid;
         color: $white;
         display: inline-block;
         font-size: 12px;
@@ -585,6 +586,7 @@
                 top: 2px;
             }
         }
+
         .search-item-snippet {
             blockquote {
                 margin-top: 0;
@@ -1091,7 +1093,7 @@
         }
 
         .pending-post-actions {
-            background: alpha-property($black, .7);
+            background: alpha-color($black, .7);
             color: $white;
             font-size: .9em;
             padding: 5px 7px;
@@ -1109,6 +1111,42 @@
             &.edited {
                 @include opacity(.6);
                 font-size: .87em;
+            }
+        }
+
+        .post-reaction-list {
+            min-height: 30px;
+        }
+
+        .post-reaction {
+            @include user-select(none);
+            @include border-radius(3px);
+            border: 1px solid $primary-color;
+            cursor: pointer;
+            display: inline-block;
+            font-size: 11px;
+            height: 23px;
+            margin-bottom: 5px;
+            margin-right: 5px;
+            padding: 0 4px 0 3px;
+
+            .post-reaction__emoji {
+                height: 16px;
+                margin: 2px 3px 0 0;
+                vertical-align: top;
+                width: 16px;
+            }
+
+            .post-reaction__count {
+                line-height: 10px;
+                position: relative;
+                top: 3px;
+            }
+
+            &--current-user {
+                .post-reaction__count {
+                    font-weight: 600;
+                }
             }
         }
     }
@@ -1298,40 +1336,4 @@
 .permalink-popover {
     margin-left: 50px !important;
     min-width: 320px;
-}
-
-.post-reaction-list {
-    min-height: 30px;
-}
-
-.post-reaction {
-    @include user-select(none);
-    @include border-radius(3px);
-    border: 1px solid $primary-color;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 11px;
-    height: 23px;
-    padding: 0 4px 0 3px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-
-    .post-reaction__emoji {
-        height: 16px;
-        margin: 2px 3px 0 0;
-        vertical-align: top;
-        width: 16px;
-    }
-
-    .post-reaction__count {
-        line-height: 10px;
-        position: relative;
-        top: 3px;
-    }
-
-    &--current-user {
-        .post-reaction__count {
-            font-weight: 600;
-        }
-    }
 }
