--- a/webapp/sass/layout/_team-sidebar.scss
+++ b/webapp/sass/layout/_team-sidebar.scss
@@ -21,6 +21,8 @@
                 width: 100%;
 
                 a {
+                    display: block;
+                    margin-left: 11px;
                     text-decoration: none;
                 }
 
